--- a/menustyle.css
+++ b/menustyle.css
@@ -10,13 +10,66 @@ body {
 }
 .contrast-mode {
     background-image: none;
-    backdrop-filter: hue-rotate(90deg);
-    backdrop-filter: contrast(2); 
-    filter:contrast(2);
 }
 .contrast-mode li a{
     color: #000;
 
+}
+.contrast-mode h3{
+    color:black;
+    
+}
+.contrast-mode h5{
+    color: #000;
+    font-weight: 800;
+}
+.contrast-mode h6{
+    font-family: "Fuzzy Bubbles", sans-serif;
+    font-size: 20px;
+    margin-top: -60px;
+    width: 650px;
+
+}
+.contrast-mode #bordernav{
+    position: fixed;
+    float: left;
+    margin-top: 235px;
+    margin-bottom: 0px;
+    height: 400px;
+    width: 270px;
+    border-radius: 0px 45px 45px 0px;
+    background-color: #aeead6;
+    border-style: groove;
+    border-width: 20px;
+    margin-left: -10px;
+
+}
+.contrast-mode #nav2{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-top: -10px;
+    overflow: hidden;
+    background-color: #aeead6;
+    margin-left: -10px;
+    margin-right: -10px;
+    /* border-radius: 50px; */
+    width: 1500;
+    height: 120px;
+    border-style: double;
+    border-color: rgb(31, 31, 31);
+    border-width: 12px;
+
+}
+.contrast-mode #nav2 li a{
+    color: #000;
+
+}
+.contrast-mode #sidebar a{
+    border-color: #000;
+}
+.contrast-mode #border{
+    background-color: #aeead6;
 }
 
 h1 {
